--- a/app/scss/layouts/_base.scss
+++ b/app/scss/layouts/_base.scss
@@ -5,11 +5,12 @@ body {
 }
 
 body {
+	font-family: Ubuntu, Helvetica, sans-serif;
 	--wrbkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: $black;
 	font-weight: 700;
-	font-size: 16px;
+	font-size: 13px;
 	line-height: 1.42;
 }
 
@@ -30,10 +31,16 @@ body {
 }
 
 .section {
+	background-position: center center;
 	background-size: cover;
+	background-repeat: no-repeat;
 	height: 100vh;
 	width: 100%;
 	overflow: hidden;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 h1,
