--- a/app/scss/blocks/_btn.scss
+++ b/app/scss/blocks/_btn.scss
@@ -1,7 +1,12 @@
 .btn {
 	border-radius: 5px;
 	padding: 10px 15px;
+	margin: 10px 15px;
 	background-color: $red;
 	color: #fff;
 	text-transform: uppercase;
+
+	&--bg-black {
+		background-color: $black;
+	}
 }
