--- a/app/scss/blocks/_reviews.scss
+++ b/app/scss/blocks/_reviews.scss
@@ -1,10 +1,65 @@
 .reviews {
 	background: #000;
+	position: relative;
+
+	// &__list {}
+
 
 	&__item {
+		color: #fff;
 		width: 25%;
 		height: 50%;
 		filter: grayscale(100%);
-		background: url("../img/reviews/photo-1.png") center center / cover no-repeat;
+		background: center center / cover no-repeat;
+		position: relative;
+
+		&:hover {
+			.reviews__hover-block {
+
+				opacity: 1;
+				transform: scale(1);
+				transition: .4s;
+			}
+		}
 	}
+
+	&__hover-block {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: rgba(#000, .5);
+		opacity: 0;
+		transform: scale(1);
+
+	}
+
+	&__expanded-block {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		/* bring your own prefixes */
+		transform: translate(-50%, -50%);
+
+		max-width: 33%;
+		border-radius: 10px;
+		background-color: #fff;
+	}
+
+	&__expanded-block-top-row {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__expanded-block-close {
+		grid-area: close_icon;
+		content: url('../img/icons/close.svg');
+	}
+
+	&__expanded-block-text {}
+
 }
