--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./blocks/down-btn";
 @import "./blocks/nav";
 @import "./blocks/header";
+@import "./blocks/vert-slider";
 @import "./blocks/contacts";
 @import "./blocks/burgers";
 @import "./blocks/form";
