fixe vert slider position

--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -1,8 +1,11 @@
 .hero {
+	background-image: url('../img/hero/bg.png');
+
 	&__container {
 		// display: flex;
 		// align-items: center;
 		// justify-content: space-around;
+
 
 		display: grid;
 		grid-template-areas:
