--- a/app/scss/blocks/_vert-slider.scss
+++ b/app/scss/blocks/_vert-slider.scss
@@ -1,7 +1,7 @@
 .vert-slider {
 	position: absolute;
 	top: 200px;
-	right: 20px;
+	right: calc(50% - 480px);
 	display: flex;
 	flex-direction: column;
 
