--- a/app/scss/blocks/_we-best.scss
+++ b/app/scss/blocks/_we-best.scss
@@ -1,6 +1,11 @@
 .we-best {
 	background-image: url('../img/we-best/bg.png');
+	text-align: center;
 
+
+	& .title {
+		margin-bottom: 3.75rem;
+	}
 
 
 
@@ -9,5 +14,9 @@
 		flex-direction: row;
 	}
 
-
+	&__item {
+		flex: 1;
+		margin-bottom: 3.125rem;
+		padding: 0 0.9375rem;
+	}
 }
