--- a/app/scss/blocks/_reviews.scss
+++ b/app/scss/blocks/_reviews.scss
@@ -36,6 +36,10 @@
 		opacity: 0;
 		transform: scale(1);
 
+		padding: 1.5625rem 1.25rem;
+		position: relative;
+		border-radius: 5px;
+
 	}
 
 	&__expanded-block {
@@ -45,14 +49,23 @@
 		/* bring your own prefixes */
 		transform: translate(-50%, -50%);
 
-		max-width: 33%;
-		border-radius: 10px;
+		max-width: 25%;
+		border-radius: 5px;
 		background-color: #fff;
 	}
 
 	&__expanded-block-top-row {
 		display: flex;
 		justify-content: space-between;
+		margin: 1rem;
+	}
+
+	&__expanded-block-name {
+		font-family: gagalin, cursive;
+		font-weight: 300;
+		font-size: 0.875rem;
+		text-transform: uppercase;
+		// margin-bottom: 1.5625rem;
 	}
 
 	&__expanded-block-close {
@@ -60,6 +73,11 @@
 		content: url('../img/icons/close.svg');
 	}
 
-	&__expanded-block-text {}
-
+	&__expanded-block-text {
+		font-size: 0.875rem;
+		font-family: ubuntu, Verdana, Arial, sans-serif;
+		font-weight: 300;
+		// font-style: normal;
+		margin: 1rem;
+	}
 }
