--- a/app/scss/layouts/_base.scss
+++ b/app/scss/layouts/_base.scss
@@ -71,7 +71,13 @@ p {
 	padding: 0;
 }
 
-a {
+.text-block p {
+	font-size: 0.875rem;
+	line-height: 1.8;
+	font-weight: 300;
+}
+
+.text-block p a {
 	text-decoration: none;
 	color: yellow;
 }
