--- a/app/scss/blocks/_btn.scss
+++ b/app/scss/blocks/_btn.scss
@@ -2,6 +2,7 @@
 	border-radius: 5px;
 	padding: 10px 15px;
 	margin: 10px 15px;
+	font-weight: 500;
 	background-color: $red;
 	color: #fff;
 	text-transform: uppercase;
