--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -1,32 +1,37 @@
 .header {
-    max-width: 940px;
-    width: 95%;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+
+    max-width: 940px;
+    width: 100%;
+
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // right: 0;
     margin: auto;
 
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    padding-top: 12px;
+    justify-content: space-between;
     z-index: 1;
 
+
+
     &__logo {
-        margin-right: 4vw;
+        display: inline-block;
+        position: relative;
+        z-index: 110;
+        padding-top: 0.75rem;
+    }
+
+    &__logo-img {
+        max-width: 94px;
     }
 
     &__buttons {
-        display: flex;
-        align-items: center;
+        flex: 1;
+        text-align: right;
+        margin-right: 0.375rem;
     }
 
-
-    &__buttons {
-        display: flex;
-        align-items: center;
-
-    }
 }
