--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -15,13 +15,14 @@
 
 	&__picture {
 		grid-area: img;
-		margin-bottom: 10vh;
+		margin-bottom: 6rem;
+		margin-right: 1rem;
 	}
 
 	&__title {
 		grid-area: title;
 		align-self: end;
-		padding-left: 1vh;
+		font-size: 4.5rem;
 	}
 
 	&__desc {
@@ -29,9 +30,8 @@
 		align-self: start;
 		color: #fff;
 		font-family: Lifehack;
-		font-size: 65px;
+		font-size: 4.0625rem;
 		line-height: 1;
-		padding-left: 1vh;
 	}
 
 
