--- a/app/scss/layouts/_base.scss
+++ b/app/scss/layouts/_base.scss
@@ -2,6 +2,19 @@ html,
 body {
 	height: 100%;
 	margin: 0;
+
+	;
+}
+
+.nav-screen {
+	position: absolute;
+	z-index: 10;
+	top: 0;
+
+	height: 100vh;
+	width: 100%;
+	background: transparent;
+	pointer-events: none
 }
 
 body {
@@ -9,9 +22,10 @@ body {
 	--wrbkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: $black;
-	font-weight: 700;
-	font-size: 13px;
+	font-weight: 300;
+
 	line-height: 1.42;
+	font-size: .875rem;
 }
 
 .wrapper {
@@ -75,7 +89,7 @@ p {
 .text-block p {
 	font-size: 0.875rem;
 	line-height: 1.8;
-	font-weight: 300;
+
 }
 
 .text-block p a {
@@ -88,6 +102,10 @@ li {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+}
+
+a {
+	text-decoration: none;
 }
 
 address {
