--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./blocks/hero";
 @import "./blocks/down-btn";
 @import "./blocks/nav";
+@import "./blocks/nav-screen";
 @import "./blocks/header";
 @import "./blocks/vert-slider";
 @import "./blocks/contacts";
