--- a/app/scss/blocks/_down-btn.scss
+++ b/app/scss/blocks/_down-btn.scss
@@ -1,21 +1,10 @@
 .down-btn {
-
-	position: static;
-	max-width: 10%;
-	z-index: 1;
-
-
-	position: absolute;
-	// top: 0;
-	bottom: 100px;
-	left: 0;
-	right: 0;
-	margin: auto;
+	margin-bottom: 2%;
 
 	&__img {
 		content: url("../img/icons/arrow-scroll.svg");
-		height: 4vh;
-		width: 2.5vw;
+		height: 1rem;
+		width: 2rem;
 	}
 
 }
