--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -1,19 +1,13 @@
 .header {
 
-
     max-width: 940px;
     width: 100%;
 
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // right: 0;
-    margin: auto;
+    margin: 0 auto;
 
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 1;
 
 
 
@@ -32,6 +26,10 @@
         flex: 1;
         text-align: right;
         margin-right: 0.375rem;
+    }
+
+    & .btn {
+        margin: 10px 15px;
     }
 
 }
