--- a/app/scss/blocks/_nav-screen.scss
+++ b/app/scss/blocks/_nav-screen.scss
@@ -7,6 +7,10 @@
 	width: 100%;
 	background: transparent;
 	pointer-events: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .nav-screen * {
