--- a/app/scss/blocks/_reviews.scss
+++ b/app/scss/blocks/_reviews.scss
@@ -2,7 +2,11 @@
 	background: #000;
 	position: relative;
 
-	// &__list {}
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		height: 100%;
+	}
 
 
 	&__item {
@@ -15,7 +19,6 @@
 
 		&:hover {
 			.reviews__hover-block {
-
 				opacity: 1;
 				transform: scale(1);
 				transition: .4s;
@@ -24,23 +27,28 @@
 	}
 
 	&__hover-block {
+		height: 100%;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
+
 		background: rgba(#000, .5);
 		opacity: 0;
 		transform: scale(1);
 
 		padding: 1.5625rem 1.25rem;
-		position: relative;
-		border-radius: 5px;
-
 	}
+
+	&__title {
+		font-family: gagalin, cursive;
+		margin-top: 10%;
+		margin-bottom: 5%;
+	}
+
+	&__text {
+		margin-bottom: 5%;
+	}
+
 
 	&__expanded-block {
 		position: absolute;
