--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -17,6 +17,7 @@
 @import "./blocks/nav-screen";
 @import "./blocks/header";
 @import "./blocks/vert-slider";
+@import "./blocks/team";
 @import "./blocks/contacts";
 @import "./blocks/burgers";
 @import "./blocks/form";
