--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -26,6 +26,10 @@
         flex: 1;
         text-align: right;
         margin-right: 0.375rem;
+
+        @include tablets {
+            display: none;
+        }
     }
 
     & .btn {
