--- a/app/scss/layouts/base.scss
+++ b/app/scss/layouts/base.scss
@@ -1,15 +1,27 @@
-html,
-body {
-	height: 100%;
-	margin: 0;
+html {
+	font-size: 16px;
 
-	;
+	@include tablets {
+		font-size: 14px;
+	}
+
+	@include phones {
+		font-size: 13px;
+	}
+
+	html,
+	body {
+		height: 100%;
+		margin: 0;
+
+		;
+	}
 }
 
 
 body {
-	font-family: Ubuntu, Helvetica, sans-serif;
-	--wrbkit-font-smoothing: antialiased;
+	font-family: ubuntu, Helvetica, sans-serif;
+	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: $black;
 	font-weight: 300;
@@ -28,7 +40,7 @@ body {
 .container {
 	margin: 0 auto;
 	max-width: 940px;
-	width: 95%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 
@@ -78,7 +90,7 @@ p {
 
 .text-block p a {
 	text-decoration: none;
-	color: yellow;
+	color: $yellow;
 }
 
 ul,
@@ -90,6 +102,7 @@ li {
 
 a {
 	text-decoration: none;
+	color: #fff;
 }
 
 address {
