--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -57,7 +57,7 @@
 		/* bring your own prefixes */
 		transform: translate(-50%, -50%);
 
-		max-width: 25%;
+		max-width: 30rem;
 		border-radius: 5px;
 		background-color: #fff;
 	}
