--- a/app/scss/blocks/footer.scss
+++ b/app/scss/blocks/footer.scss
@@ -5,29 +5,15 @@
 	right: 0;
 	display: flex;
 
+	align-items: center;
+	justify-content: space-between;
 
 	padding: 0 10%;
 	background-color: $black;
-	height: 8%;
-
-
-	&__col {
-		flex: 1;
-		background-color: $black;
-	}
-
-	&__contacts {
-		display: flex;
-		// flex-direction: column;
-		// justify-content: center;
-		align-items: center;
-	}
+	height: 5rem;
 }
 
 .contacts {
-
-	// align-items: center;
-
 	&__address {
 		color: #fff;
 		margin-bottom: rem(14px);
@@ -56,4 +42,42 @@
 		font-weight: 700;
 		display: flex;
 	}
+}
+
+
+.social {
+	display: flex;
+	justify-content: flex-end;
+
+	@include phones {
+		justify-content: center;
+		width: 100%
+	}
+
+	&__list {
+		display: flex;
+	}
+
+	&__item {
+		margin-right: rem(20px);
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+
+	&__link {
+		opacity: 0.5;
+		transition: .5s;
+	}
+
+	&__icon {
+		height: rem(20px);
+		width: rem(20px);
+
+	}
+}
+
+.social__link:hover {
+	opacity: 1;
 }
