--- a/app/scss/blocks/hero.scss
+++ b/app/scss/blocks/hero.scss
@@ -2,22 +2,17 @@
 	background-image: url('../img/hero/bg.png');
 
 	&__container {
-		// display: flex;
-		// align-items: center;
-		// justify-content: space-around;
-
-
 		display: grid;
 		grid-template-areas:
 			"img title"
 			"img desc";
 
-		// @include tables {
-		// 	grid-template-areas:
-		// 		"img"
-		// 		"title"
-		// 		"desc";
-		// }
+		@include tablets {
+			grid-template-areas:
+				"img"
+				"title"
+				"desc";
+		}
 
 	}
 
