--- a/app/scss/blocks/form.scss
+++ b/app/scss/blocks/form.scss
@@ -14,6 +14,11 @@
 		display: flex;
 		font-size: rem(14px);
 
+		@include tablets {
+			flex-direction: column;
+			margin: 0 5rem;
+		}
+
 		& * {
 			color: #fff;
 		}
@@ -24,6 +29,10 @@
 		display: flex;
 		flex-direction: column;
 		margin-right: 1.25rem;
+
+		@include tablets {
+			margin-right: 0;
+		}
 
 		&:last-child {
 			margin-right: 0;
