--- a/app/scss/blocks/hero.scss
+++ b/app/scss/blocks/hero.scss
@@ -1,60 +1,39 @@
 .hero {
-	background-image: url('../img/hero/bg.png');
-
-	&__container {
-		margin: auto;
-		// max-width: 80%;
-		// max-height: 80%;
-		display: grid;
-		// grid-template: 1fr 1fr / 2fr 1fr;
-		grid-template-areas:
-			"img title"
-			"img desc";
-
-		@include tablets {
-			grid-template-areas:
-				"img"
-				"title"
-				"desc";
-			// align-items: center;
-			text-align: center;
-		}
-
-	}
-
-	&__img-wrapper {
-		margin: 0 auto;
-		grid-area: img;
-		// margin-bottom: 6rem;
-		// margin-right: 1rem;
-		align-self: center;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-
-		height: 25rem;
-		width: 25rem;
-	}
-
-	&__burger-img {
-		max-width: 100%;
-		max-height: 100%;
-	}
-
-	&__title {
-		grid-area: title;
-		align-self: end;
-		font-size: 4.5rem;
-	}
-
-	&__desc {
-		grid-area: desc;
-		align-self: start;
-		color: #fff;
-		font-family: Lifehack;
-		font-size: 4.0625rem;
-		line-height: 1;
-	}
-
-
+  background-image: url('../img/hero/bg.png');
+  &__container {
+    margin: auto;
+    display: grid;
+    grid-template-areas: "img title""img desc";
+    @include tablets {
+      grid-template-areas: "img""title""desc";
+      text-align: center;
+    }
+  }
+  &__img-wrapper {
+    margin: 0 auto;
+    grid-area: img;
+    align-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25rem;
+    width: 25rem;
+  }
+  &__burger-img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  &__title {
+    grid-area: title;
+    align-self: end;
+    font-size: 4.5rem;
+  }
+  &__desc {
+    grid-area: desc;
+    align-self: start;
+    color: #fff;
+    font-family: Lifehack;
+    font-size: 4.0625rem;
+    line-height: 1;
+  }
 }
