--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -11,11 +11,19 @@
 
 	&__item {
 		color: #fff;
-		width: 25%;
-		height: 50%;
 		filter: grayscale(100%);
 		background: center center / cover no-repeat;
 		position: relative;
+
+		width: 25%;
+		height: 50%;
+
+		@include tablets {
+			width: 50%;
+			height: 25%;
+
+
+		}
 
 		&:hover {
 			.reviews__hover-block {
@@ -37,6 +45,16 @@
 		transform: scale(1);
 
 		padding: 1.5625rem 1.25rem;
+
+
+		@include tablets {
+			padding: 0 15%;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+		}
 	}
 
 	&__title {
@@ -47,6 +65,8 @@
 
 	&__text {
 		margin-bottom: 5%;
+
+
 	}
 
 
