--- a/app/scss/blocks/form.scss
+++ b/app/scss/blocks/form.scss
@@ -41,6 +41,11 @@
 
 	&__row {
 		display: flex;
+
+		@include phones {
+			justify-content: center;
+		}
+
 		margin-bottom: 1.25rem;
 
 		& .btn {
