--- a/app/scss/blocks/menu.scss
+++ b/app/scss/blocks/menu.scss
@@ -17,7 +17,6 @@
 	right: 0;
 	top: 0;
 	bottom: 0;
-	max-width: 50%;
 
 	@include tablets {
 		max-width: 100%;
@@ -38,6 +37,10 @@
 		align-items: center;
 		justify-content: center;
 		width: 5rem;
+
+		@include phones {
+			width: 3.5rem;
+		}
 	}
 
 	&__title {
