--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -77,7 +77,12 @@
 		/* bring your own prefixes */
 		transform: translate(-50%, -50%);
 
-		max-width: 30rem;
+		width: 30rem;
+
+		@include phones {
+			width: 90%;
+		}
+
 		border-radius: 5px;
 		background-color: #fff;
 	}
