--- a/app/scss/blocks/down-btn.scss
+++ b/app/scss/blocks/down-btn.scss
@@ -1,10 +1,20 @@
 .down-btn {
 	margin-bottom: 2%;
+	transition: .3s;
+
+	&:hover {
+		margin-bottom: 2.5%;
+	}
 
 	&__img {
 		content: url("../img/icons/arrow-scroll.svg");
 		height: 1rem;
 		width: 2rem;
-	}
+		transition: .3s;
 
+		&:hover {
+			height: 1.2rem;
+			width: 2.4rem;
+		}
+	}
 }
