layot burger complete

--- a/app/scss/blocks/btn.scss
+++ b/app/scss/blocks/btn.scss
@@ -6,6 +6,7 @@
 	background-color: $red;
 	color: #fff;
 	text-transform: uppercase;
+	cursor: pointer;
 
 	&--bg-black {
 		background-color: $black;
