--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -23,6 +23,7 @@
 @import "./blocks/team-accordion";
 @import "./blocks/contacts";
 @import "./blocks/burgers";
+@import "./blocks/ingredients";
 @import "./blocks/form";
 @import "./blocks/how_work";
 @import "./blocks/menu";
