--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -18,6 +18,7 @@
 @import "./blocks/nav-screen";
 @import "./blocks/header";
 @import "./blocks/hamburger-menu-link";
+@import "./blocks/hamburger-menu";
 @import "./blocks/vert-slider";
 @import "./blocks/team";
 @import "./blocks/team-accordion";
