draft finish week_3

--- a/app/scss/blocks/hamburger-menu.scss
+++ b/app/scss/blocks/hamburger-menu.scss
@@ -20,32 +20,32 @@
 	}
 }
 
-.nav {
-	vertical-align: middle;
+// .nav {
+// 	vertical-align: middle;
 
-	&_hamburger {
-		width: auto;
+// 	&_hamburger {
+// 		width: auto;
 
 
-		@include tablets {
-			display: block;
-		}
+// 		@include tablets {
+// 			display: block;
+// 		}
 
-		& .nav__list {
-			flex-direction: column;
-			text-align: center;
-		}
+// 		& .nav__list {
+// 			flex-direction: column;
+// 			text-align: center;
+// 		}
 
-		& .nav__item {
-			display: inline;
-			text-align: center;
-			opacity: 0;
-			animation-fill-mode: forwards;
-		}
+// 		& .nav__item {
+// 			display: inline;
+// 			text-align: center;
+// 			opacity: 0;
+// 			animation-fill-mode: forwards;
+// 		}
 
-		& .nav__link {
-			font-size: 1.5625rem;
+// 		& .nav__link {
+// 			font-size: 1.5625rem;
 
-		}
-	}
-}
+// 		}
+// 	}
+// }
