--- a/app/scss/blocks/hamburger-menu-link.scss
+++ b/app/scss/blocks/hamburger-menu-link.scss
@@ -26,6 +26,7 @@
 			width: rem(24px);
 			height: rem(5px);
 			border-radius: rem(3px);
+			transition: transform .3s;
 		}
 
 		&:before,
@@ -41,6 +42,21 @@
 
 		&::after {
 			bottom: 0;
+
 		}
+
+		.is-active & {
+
+			background-color: transparent;
+
+			&:before {
+				transform: translateY(rem(9px)) rotate(45deg);
+			}
+
+			&::after {
+				transform: translateY(rem(-9px)) rotate(-45deg);
+			}
+		}
+
 	}
 }
