--- a/app/scss/blocks/menu.scss
+++ b/app/scss/blocks/menu.scss
@@ -63,7 +63,11 @@
 		overflow: hidden;
 
 		.is-active & {
-			width: 100%;
+			width: rem(550px);
+
+			@include tablets {
+				max-width: 100%;
+			}
 
 
 		}
