--- a/app/scss/blocks/burgers.scss
+++ b/app/scss/blocks/burgers.scss
@@ -35,9 +35,11 @@
 		@include tablets {
 			bottom: auto;
 			left: auto;
-			top: 0;
+			top: -3rem;
 			right: 0;
 		}
+
+
 
 		&-icon {
 			background: url("../img/icons/kkal.svg")50% no-repeat;
@@ -77,6 +79,8 @@
 
 		@include tablets {
 			flex-direction: column;
+			padding-top: 5rem;
+			margin-top: 5rem;
 		}
 	}
 
