--- a/app/scss/blocks/ingredients.scss
+++ b/app/scss/blocks/ingredients.scss
@@ -10,9 +10,11 @@
 	justify-content: center;
 	align-items: center;
 	font-size: 1rem;
+	position: absolute;
 
 	@include tablets {
 		top: -3rem;
+
 	}
 
 	&__text {
@@ -32,8 +34,12 @@
 		transition: opacity .3s;
 		z-index: 3;
 		top: 0;
+
 		// left: 100%;
 		// opacity: 1;
+		@include small-phones {
+			transform: scale(0.9);
+		}
 
 		.is-active & {
 			left: 100%;
