--- a/app/scss/blocks/ingredients.scss
+++ b/app/scss/blocks/ingredients.scss
@@ -35,10 +35,8 @@
 		z-index: 3;
 		top: 0;
 
-		// left: 100%;
-		// opacity: 1;
-		@include small-phones {
-			transform: scale(0.9);
+		@include phones {
+			width: 16rem;
 		}
 
 		.is-active & {
