--- a/app/scss/blocks/team.scss
+++ b/app/scss/blocks/team.scss
@@ -10,10 +10,11 @@
 		background-color: rgba(47, 50, 52, 0.93);
 
 		@include tablets {
+
 			width: 100%;
 			display: flex;
 			justify-content: center;
-			align-items: center;
+			align-items: flex-start;
 			text-align: center;
 		}
 
@@ -23,7 +24,8 @@
 		margin: 5% 2% 0 7%;
 
 		@include tablets {
-			padding: 0 25%;
+			margin-top: 5rem;
+
 		}
 
 
