--- a/app/scss/blocks/we-best.scss
+++ b/app/scss/blocks/we-best.scss
@@ -1,5 +1,5 @@
 .we-best {
-	background-image: url('../img/we-best/bg.png');
+	background-image: url('../img/we-best/bg.jpg');
 	text-align: center;
 
 	@include phones {
