--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -1,4 +1,4 @@
 .map {
-	background-image: url("../img/contacts/map.png");
+	background-image: url("../img/contacts/map.jpg");
 	position: relative;
 }
