--- a/app/scss/blocks/menu.scss
+++ b/app/scss/blocks/menu.scss
@@ -1,5 +1,5 @@
 .menu {
-	background-image: url('../img/menu/photo-big.png');
+	background-image: url('../img/menu/photo-big.jpg');
 	color: #fff;
 	position: relative;
 
