--- a/app/scss/blocks/team.scss
+++ b/app/scss/blocks/team.scss
@@ -1,5 +1,5 @@
 .team {
-	background-image: url('../img/team/bg.png');
+	background-image: url('../img/team/bg.jpg');
 
 	// height: 100%;
 	&__container {
