--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -1,4 +1,15 @@
 .map {
-	background-image: url("../img/contacts/map.jpg");
+	// background-image: url("../img/contacts/map.jpg");
 	position: relative;
+	// display: flex;
+	// justify-content: center;
+	// align-items: center;
+
+	&__map {
+		// display: flex;
+		// justify-content: center;
+		// align-items: center;
+		width: 100%;
+		height: 100%;
+	}
 }
