--- a/app/scss/blocks/team.scss
+++ b/app/scss/blocks/team.scss
@@ -21,11 +21,11 @@
 	}
 
 	&__details {
-		margin: 5% 2% 0 7%;
+		margin: 15% auto;
+		width: 80%;
 
 		@include tablets {
 			margin-top: 5rem;
-
 		}
 
 
