--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -1,6 +1,11 @@
 .map {
 	position: relative;
 
+	// display: flex !important;
+	// justify-content: center !important;
+	// align-items: center ;
+
+
 	&__map {
 		width: 100%;
 		height: 100%;
