--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,11 +6,11 @@
 @import "./layouts/fonts";
 @import "./layouts/media";
 @import "./layouts/base";
+@import "./layouts/ops";
 
 
 
 // Blocks
-@import "./blocks/ops";
 @import "./blocks/btn";
 @import "./blocks/title";
 @import "./blocks/hero";
