--- a/app/scss/blocks/vert-slider.scss
+++ b/app/scss/blocks/vert-slider.scss
@@ -1,4 +1,4 @@
-%vert-slider-links-shared {
+%ops-slider-links-shared {
 	content: "";
 	position: absolute;
 
@@ -9,7 +9,7 @@
 	display: block;
 }
 
-.vert-slider {
+.ops-slider {
 	position: absolute;
 	z-index: 20;
 	top: rem(90px);
@@ -30,14 +30,14 @@
 		display: block;
 
 		&::before {
-			@extend %vert-slider-links-shared;
+			@extend %ops-slider-links-shared;
 			width: 6px;
 			height: 6px;
 			background: #fff;
 		}
 
 		&::after {
-			@extend %vert-slider-links-shared;
+			@extend %ops-slider-links-shared;
 			width: 1rem;
 			height: 1rem;
 
@@ -45,8 +45,8 @@
 			opacity: 0;
 		}
 
-		.vert-slider__item:hover &:after,
-		.vert-slider__item--active &:after {
+		.ops-slider__item:hover &:after,
+		.is-active &:after {
 			opacity: 1;
 		}
 	}
