--- a/app/scss/blocks/hamburger-menu.scss
+++ b/app/scss/blocks/hamburger-menu.scss
@@ -1,5 +1,5 @@
 .hamburger-menu {
-	position: absolute;
+	position: static;
 	left: -99999px;
 	right: 0;
 	background: rgba(47, 50, 52, 0.95);
@@ -16,7 +16,7 @@
 		right: 0;
 		bottom: 0;
 		top: 0;
-		z-index: 1;
+		z-index: 20;
 	}
 
 
