--- a/app/scss/blocks/hamburger-menu.scss
+++ b/app/scss/blocks/hamburger-menu.scss
@@ -1,5 +1,5 @@
 .hamburger-menu {
-	position: static;
+	position: absolute;
 	left: -99999px;
 	right: 0;
 	background: rgba(47, 50, 52, 0.95);
@@ -18,6 +18,4 @@
 		top: 0;
 		z-index: 20;
 	}
-
-
 }
