--- a/app/scss/blocks/how_work.scss
+++ b/app/scss/blocks/how_work.scss
@@ -11,8 +11,8 @@
 	}
 
 	& .video-js {
-		width: 90%;
-		margin: 0 auto;
+		// width: 90%;
+		// margin: 0 auto;
 		// height: rem(720px);
 
 		// @include tablets {}
